2006-01-31 yo
* Fix OrganisationModule_viewOrganisationList and PersonModule_viewPersonList to use translated titles or plain titles.

2006-01-30 jerome
* added support for workflow validation in list mode (see Accounting Transaction Module for an example of how to use it)

2006-01-30 jerome
* modify Organisation_viewDetails to add a listbox for Accounting Periods.

2006-01-30 aurel
* change name of some actions

2006-01-27 aurel
* add action to create module

2006-01-26 Jerome
* added Base_uniqueReferenceInFolderValidator python script for my_reference fields validators.
* make sure two currencies with the same reference do not exist.

2006-01-26 Romain
* modify Base_edit to call field_editor after saving the matrixbox.

2006-01-26 Aurel
* add some actions

2006-01-23 Alex
* simplified Bank Accounts
* added support for Portal Type Role Definitions

2006-01-23 JPS
* Added support for legal_parent, natural_parent and insurance base categories

2006-01-23 Aurel
* check category_list is a list in ERP5Type_asSecurityGroupId

2006-01-23 Alex
* Added "Add portal folders" permission for Author in Base_setDefaultSecurity

2006-01-21 JP
* Added Base_jumpToRelationObject to ease the implementation of jump menus
* Added support for user based role assignment (ERP5Type_getSecurityCategoryFromArrow)

2006-01-20 JP & Jerome
* Added document template initial support to Base_doAction and erp5_html_style

2006-01-20 Kevin
* Replace Translation Service by Localizer in: erp5_core/Base_TranslateString, erp5_core/ERP5Site_updateTranslationTable, erp5_csv_style/Listbox_exportCsv, erp5_html_style/form_html, erp5_html_style/view_master.xml, erp5_pdf_style/form_view, erp5_pdf_style/listbox_pdf_macro, erp5_pdf_style/report_pdf and erp5_pdf_style/report_view.
* ERP5Site_getModuleItemList cleaned.

2006-01-19 alex
* included result of "guess properties" script
* added constraints to BT_viewDetail

2006-01-18 aurel